--- a/style.css
+++ b/style.css
@@ -25,11 +25,6 @@ html {
 	position: relative;
 	min-height: 100%;
 }
-  
-header {
-	background-color: var(--dark2);
-	color: var(--aem-yellow);
-}
 
 body {
 	background-color: var(--dark1);
@@ -42,9 +37,18 @@ body {
 
 /* HEADER */
 
+header {
+	background-color: var(--dark2);
+	color: var(--aem-yellow);
+}
+
 /* MAIN */
 
-
+button {
+    height: 32px;
+    width: 32px;
+    font-size: 24px;
+}
 
 /* FOOTER */
 
